--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "git-commit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "this is README file.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "devDependencies": {
+    "cz-conventional-changelog": "^2.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
